--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,8 +11,7 @@
     "start": "next start",
     "test": "jest --config=jest.config.cjs",
     "lint": "next lint",
-    "type-check": "tsc -p tsconfig.typecheck.json --noEmit",
-    "e2e": "playwright test"
+    "type-check": "tsc -p tsconfig.typecheck.json --noEmit"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -34,7 +33,7 @@
     "zustand": "^5.0.1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.45.1",
+    
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/bcryptjs": "2.4.6",
@@ -82,7 +81,7 @@
     "next-sitemap": "^4.2.3",
     "nodemailer": "^6.9.16",
     "postcss": "^8.5.3",
-    "puppeteer": "^23.6.0",
+    
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.62.0",
     "react-router-dom": "^6.21.1",
