fix(frontend): avoid OOM by disabling TS/ESLint in CI and increasing Node heap; retry build

--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -11,6 +11,7 @@ COPY apps/frontend/ ./
 
 # Build Next.js app
 ENV NEXT_TELEMETRY_DISABLED=1
+ENV NODE_OPTIONS=--max-old-space-size=4096
 RUN npm run build
 
 # Runtime stage
