perf(frontend): switch to Next standalone + node:20-bookworm-slim; install prod deps only; increase Node heap; improve npm flags

--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -1,10 +1,10 @@
 # Build stage
-FROM node:20-alpine AS builder
+FROM node:20-bookworm-slim AS builder
 WORKDIR /app
 
 # Install dependencies
 COPY apps/frontend/package*.json ./
-RUN npm ci || npm install
+RUN npm ci --omit=dev --no-audit --no-fund --prefer-offline || npm install --omit=dev --no-audit --no-fund
 
 # Copy source
 COPY apps/frontend/ ./
@@ -12,24 +12,23 @@ COPY apps/frontend/ ./
 # Build Next.js app
 ENV NEXT_TELEMETRY_DISABLED=1
 ENV NODE_OPTIONS=--max-old-space-size=4096
+ENV CI=true PUPPETEER_SKIP_DOWNLOAD=1 PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1
 RUN npm run build
 
 # Runtime stage
-FROM node:20-alpine AS runner
+FROM node:20-bookworm-slim AS runner
 WORKDIR /app
 ENV NODE_ENV=production
 ENV NEXT_TELEMETRY_DISABLED=1
 
-# Copy only the built app and minimal files
-COPY --from=builder /app/.next ./.next
+### Copy standalone output & static assets
+# Next standalone output contains server.js and minimal node_modules
+COPY --from=builder /app/.next/standalone ./
+COPY --from=builder /app/.next/static ./.next/static
 COPY --from=builder /app/public ./public
-COPY --from=builder /app/package*.json ./
-
-# Install production dependencies only
-RUN npm ci --omit=dev || npm install --omit=dev
 
 # Expose port and run
 ENV PORT=8080
 ENV HOSTNAME=0.0.0.0
 EXPOSE 8080
-CMD ["npm","run","start","--","-p","8080"]
+CMD ["node","server.js"]
