fix(frontend Docker): install workspace deps with npm -w apps/frontend; build workspace; copy monorepo standalone output; retry deploy

--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -2,33 +2,37 @@
 FROM node:20-bookworm-slim AS builder
 WORKDIR /app
 
-# Install dependencies
-COPY apps/frontend/package*.json ./
-RUN npm ci --omit=dev --no-audit --no-fund --prefer-offline || npm install --omit=dev --no-audit --no-fund
+# Environment for reproducible and faster builds
+ENV CI=true \
+    NEXT_TELEMETRY_DISABLED=1 \
+    NODE_OPTIONS=--max-old-space-size=4096 \
+    PUPPETEER_SKIP_DOWNLOAD=1 \
+    PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1 \
+    NPM_CONFIG_FUND=false \
+    NPM_CONFIG_AUDIT=false
 
-# Copy source
-COPY apps/frontend/ ./
+# Install production dependencies for frontend workspace only
+COPY package*.json ./
+COPY apps/frontend/package*.json apps/frontend/
+RUN npm ci --workspace=apps/frontend --omit=dev --no-audit --no-fund || \
+    npm install -w apps/frontend --omit=dev --no-audit --no-fund
 
-# Build Next.js app
-ENV NEXT_TELEMETRY_DISABLED=1
-ENV NODE_OPTIONS=--max-old-space-size=4096
-ENV CI=true PUPPETEER_SKIP_DOWNLOAD=1 PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1
-RUN npm run build
+# Copy source and build (workspace-aware)
+COPY apps/frontend/ apps/frontend/
+RUN npm run -w apps/frontend build
 
 # Runtime stage
 FROM node:20-bookworm-slim AS runner
 WORKDIR /app
-ENV NODE_ENV=production
-ENV NEXT_TELEMETRY_DISABLED=1
+ENV NODE_ENV=production \
+    NEXT_TELEMETRY_DISABLED=1 \
+    PORT=8080 \
+    HOSTNAME=0.0.0.0
 
-### Copy standalone output & static assets
-# Next standalone output contains server.js and minimal node_modules
-COPY --from=builder /app/.next/standalone ./
-COPY --from=builder /app/.next/static ./.next/static
-COPY --from=builder /app/public ./public
+### Copy standalone output for the frontend workspace
+COPY --from=builder /app/apps/frontend/.next/standalone ./
+COPY --from=builder /app/apps/frontend/.next/static ./apps/frontend/.next/static
+COPY --from=builder /app/apps/frontend/public ./apps/frontend/public
 
-# Expose port and run
-ENV PORT=8080
-ENV HOSTNAME=0.0.0.0
 EXPOSE 8080
 CMD ["node","server.js"]
